2001-03-18  Dan Espen  <dane@mk.telcordia.com>

	* generated/FAQ.html: Regenerate FAQ.

2001-03-02  Dominik Vogt  <dominik.vogt@gmx.de>

	* download.html, index.html: News Flash, download 2.3.29.

2001-02-26  Dan Espen  <dane@mk.telcordia.com>

	* generated/NEWS.html: Regenerate NEWS, FAQ, AUTHORS, man pages.

2001-02-25  Dan Espen  <dane@mk.telcordia.com>

	* download.html, index.html: News flash, download 2.2.5.

2001-01-25  Dan Espen  <dane@mk.telcordia.com>

	* download.html, index.html: News Flash, download 2.3.28.

2001-01-20  Dan Espen  <dane@mk.telcordia.com>

	* vector-buttons/DecorDemo1-4.fvwmrc/gif: Hide the handles.
	* vector-buttons/testbed.fvwmrc: Update grab instructions to account
	for windowshading.

2001-01-21  Mikhael Goikhman  <migo@homemail.com>

	* vector-buttons/testbed.fvwmrc:
	It is impossible now to get title width 0 (only buttons), so
	add a full title "button_demo_style", more improvements.
	Added stop_button_demo function,
	* vector-buttons/DecorDemo[1-4].fvwmrc:
	Since title is displayed now, fix TitleStyle definitions.
	* vector-buttons/DecorDemo[1-4].gif:
	recreated gifs

	* generated/{FAQ,NEWS}.html: regenerated

2001-01-20  Dan Espen  <dane@mk.telcordia.com>

	* vector-buttons/vector-buttons.html: Add collection 4.
	* vector-buttons/DecorDemo4.fvwmrc: Jeff Walker's arrows with bars.
	* vector-buttons/testbed.fvwmrc: Put Mouse bindings back, I seem to need
	them.

2001-01-04  Mikhael Goikhman  <migo@homemail.com>

	* index.html:
	added a link to AUTHORS and minor spacing needed for some browsers

2001-01-03  Dominik Vogt  <dominik.vogt@gmx.de>

	* index.html:
	* download.html: increased version number to 2.3.27

2000-12-29  Dominik Vogt  <dominik.vogt@gmx.de>

	* index.html:
	upped beta release number

2000-12-26  Dominik Vogt  <dominik.vogt@gmx.de>

	* download.html: increased version number to 2.3.26

2000-12-20  olicha  <olivier.chapuis@free.fr>

	* index.html:
	Remove the link to acknowledgements
